--- a/day07/ex04/Makefile
+++ b/day07/ex04/Makefile
@@ -1,5 +1,5 @@
 RESULT = a.out
-SOURCES = galifrey.ml army.ml dalek.ml doctor.ml people.ml main.ml
+SOURCES = army.ml dalek.ml doctor.ml people.ml galifrey.ml main.ml
 LIBS = 
 OCAMLMAKEFILE = OCamlMakefile
 include $(OCAMLMAKEFILE)
