day08: ex02: ok

--- a/day08/ex02/Makefile
+++ b/day08/ex02/Makefile
@@ -1,5 +1,5 @@
 RESULT = a.out
-SOURCES = .ml
+SOURCES = atom.ml molecule.ml alkane.ml main.ml
 LIBS = 
 OCAMLMAKEFILE = OCamlMakefile
 include $(OCAMLMAKEFILE)
