--- a/day08/ex04/Makefile
+++ b/day08/ex04/Makefile
@@ -1,5 +1,5 @@
 RESULT = a.out
-SOURCES = .ml
+SOURCES = atom.ml molecule.ml alkane.ml reaction.ml alkane_combustion.ml main.ml
 LIBS = 
 OCAMLMAKEFILE = OCamlMakefile
 include $(OCAMLMAKEFILE)
